--- a/lang/en.json
+++ b/lang/en.json
@@ -13,6 +13,13 @@
     "too_many_results": "More than 20 results, please refine your search terms.",
     "no_results": "No results found.",
     "pagetooltip": "See page",
-    "window_title": "Search"
+    "window_title": "Search",
+    "settings" :
+    {
+      "entryMethodName" : "Entry Method",
+      "entryMethodHint" : "Set the entry method to start a full search",
+      "chatBar" : "Bar at the bottom of chat",
+      "controlButton": "Icon in the left icon column"
+    }
   }
 }
