--- a/lang/fr.json
+++ b/lang/fr.json
@@ -12,6 +12,13 @@
     "unhighlighted_tooltip": "Surligner le texte recherché dans les documents",
     "too_many_results": "Plus de 20 résultats, affinez votre recherche.",
     "no_results": "Aucun résultat.",
-    "window_title": "Rechercher"
+    "window_title": "Rechercher",
+    "settings" :
+    {
+      "entryMethodName" : "Méthode d'entrée",
+      "entryMethodHint" : "Définit le moyen de lancer une recherche",
+      "chatBar" : "Barre en bas de la fenêtre de Tchat",
+      "controlButton": "Icone dans la colonne de gauche"
+    }
   }
 }
